added the second and the third blog

--- a/index.html
+++ b/index.html
@@ -12,5 +12,15 @@
         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore labore nulla odit quisquam quibusdam placeat, doloribus sunt. Quisquam consectetur repellendus dignissimos eveniet. Consequuntur error in perferendis, fuga similique eius quasi.
         </p>
     </div>
+    <div>
+        <h3> my second website</h3>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore labore nulla odit quisquam quibusdam placeat, doloribus sunt. Quisquam consectetur repellendus dignissimos eveniet. Consequuntur error in perferendis, fuga similique eius quasi.
+        </p>
+    </div>
+    <div>
+        <h3> my third website</h3>
+        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore labore nulla odit quisquam quibusdam placeat, doloribus sunt. Quisquam consectetur repellendus dignissimos eveniet. Consequuntur error in perferendis, fuga similique eius quasi.
+        </p>
+    </div>
 </body>
 </html>
