--- a/index.html
+++ b/index.html
@@ -22,5 +22,13 @@
         <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore labore nulla odit quisquam quibusdam placeat, doloribus sunt. Quisquam consectetur repellendus dignissimos eveniet. Consequuntur error in perferendis, fuga similique eius quasi.
         </p>
     </div>
+    <div>
+        <h3> How to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"add a meaningful commit message"</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 </html>
