added vegeta final blast

--- a/index.html
+++ b/index.html
@@ -30,5 +30,9 @@
             <li>git push</li>
         </ul>
     </div>
+    <div>
+        <h3>vegeta the final blast</h3>
+        <img src="images/vegeta.jpg" alt="" srcset="">
+    </div>
 </body>
 </html>
